welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: not found: value isFacingTrail
    while(isFacingTrail()==true){
          ^SlugHunting:10: error: not found: value isFacingTrail
    if(isFacingTrail()==true){
       ^SlugHunting:15: error: not found: value isFacingTrail
	 if(isFacingTrail()==true){
            ^