welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    
  while(estSurBiscuit==false){
  
    while(isFacingTrail()==true){
      avance();
    }
		gauche();
    if(isFacingTrail()==true){
      avance();
    }
  	droite();
    droite();
	 if(isFacingTrail()==true){
      avance();
    }
}
}
// Copy your isFacingTrail() here